--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <header class="masthead text-center text-white">
             <div class="masthead-content">
                 <div class="container px-5">
-                    <h1 class="masthead-heading mb-0">Ming Yao Rocks</h1>
+                    <h1 class="masthead-heading mb-0">Ming Yao's Adventures</h1>
                     <h2 class="masthead-subheading mb-0">I love to create and Code</h2>
                     
                 </div>
@@ -49,7 +49,7 @@
                     <div class="col-lg-6">
                         <div class="p-5">
                             <h2 class="display-4">My Python Projects</h2>
-                            <p>I have made many games in Python like shotter games, Rpg games, and much more. The links for some of them are below. </p>
+                            <p>Making games in Python like shooter games, Rpg games, and much more. The links for some of them are below. </p>
                             <p> this is the link to my Python Folder.  You can download and run the code if you have Python and the respective libraries installed in your computer</p>
 
                         </div>
@@ -67,7 +67,7 @@
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
                             <h2 class="display-4">My Websites with JavaScript</h2>
-                            <p>I have made websites about Ecosystems, shortcuts to tech-related topics and animation loops.</p>
+                            <p>Designing websites about Ecosystems, shortcuts to tech-related topics and animation loops.</p>
                         </div>
                     </div>
                 </div>
@@ -83,7 +83,7 @@
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
                             <h2 class="display-4">My 3D Printing Projects</h2>
-                            <p>I have made many types of toys and anime figures using tinkercad.</p>
+                            <p>Creating toys and anime figures using tinkercad.</p>
                         </div>
                     </div>
                 </div>
@@ -99,7 +99,7 @@
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
                             <h2 class="display-4">My Photographs</h2>
-                            <p>Whenever I found things in nature or interesting things, I would whip out my pg=hone and take some phots. The phone I use is a Iphone 13 ProMax.</p>
+                            <p>When I come across interesting things in nature, I use my phone to take photos and catalog them. The phone I use is an Iphone 13 ProMax.</p>
                         </div>
                     </div>
                 </div>
