--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="masthead-content">
                 <div class="container px-5">
                     <h1 class="masthead-heading mb-0">Ming Yao's Adventures</h1>
-                    <h2 class="masthead-subheading mb-0">I love to create and Code</h2>
+                    <h2 class="masthead-subheading mb-0">Creating and Coding</h2>
                     
                 </div>
             </div>
@@ -49,8 +49,8 @@
                     <div class="col-lg-6">
                         <div class="p-5">
                             <h2 class="display-4">My Python Projects</h2>
-                            <p>Making games in Python like shooter games, Rpg games, and much more. The links for some of them are below. </p>
-                            <p> this is the link to my Python Folder.  You can download and run the code if you have Python and the respective libraries installed in your computer</p>
+                            <p>Making games in Python like shooter games, RPG games, and much more. The links for some of them are below. </p>
+                            <p> this is the link to my Python Folder.  You can download and run the code if you have Python and the libraries installed in your computer</p>
 
                         </div>
                     </div>
