--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="p-5">
-                            <h2 class="display-4">My Python Projects</h2>
+                            <h2 class="display-4">Python Projects</h2>
                             <p>Making games in Python like shooter games, RPG games, and much more. The links for some of them are below. </p>
                             <p> this is the link to my Python Folder.  You can download and run the code if you have Python and the libraries installed in your computer</p>
 
@@ -66,7 +66,7 @@
                     </div>
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
-                            <h2 class="display-4">My Websites with JavaScript</h2>
+                            <h2 class="display-4">Websites with JavaScript</h2>
                             <p>Designing websites about Ecosystems, shortcuts to tech-related topics and animation loops.</p>
                         </div>
                     </div>
@@ -82,7 +82,7 @@
                     </div>
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
-                            <h2 class="display-4">My 3D Printing Projects</h2>
+                            <h2 class="display-4">3D Printing Projects</h2>
                             <p>Creating toys and anime figures using tinkercad.</p>
                         </div>
                     </div>
@@ -98,7 +98,7 @@
                     </div>
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
-                            <h2 class="display-4">My Photographs</h2>
+                            <h2 class="display-4">Photographs</h2>
                             <p>When I come across interesting things in nature, I use my phone to take photos and catalog them. The phone I use is an Iphone 13 ProMax.</p>
                         </div>
                     </div>
