--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
                             <h2 class="display-4">Photographs</h2>
-                            <p>When I come across interesting things in nature, I use my phone to take photos and catalog them. The phone I use is an Iphone 13 ProMax.</p>
+                            <p>Photographing interesting animals and plants. The phone I use is an iPhone 13 ProMax.</p>
                         </div>
                     </div>
                 </div>
