--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <div class="p-5">
                             <h2 class="display-4">Python Projects</h2>
                             <p>Making games in Python like shooter games, RPG games, and much more. The links for some of them are below. </p>
-                            <p> This is the link to my Python Folder.  You can download and run the code if you have Python and the libraries installed in your computer  <a href="https://drive.google.com/drive/folders/1xmIcWgY7RSOeHAalLxuk59PwAR-umGxW?usp=share_link>
+                            <p> This is the link to my Python folder.  You can download and run the code if you have Python and the libraries installed in your computer  <a href="https://drive.google.com/drive/folders/1xmIcWgY7RSOeHAalLxuk59PwAR-umGxW?usp=share_link>
                                 "target="_black>My Python files!</a>/p>
 
                         </div>
